Fixing spacing between list elements

--- a/frontend/recipeapp/src/Components/RecipeView/RecipeView.module.css
+++ b/frontend/recipeapp/src/Components/RecipeView/RecipeView.module.css
@@ -10,7 +10,8 @@
 }
 
 .list>li {
-    line-height: 2.5rem;
+    margin-top:1rem;
+    line-height: 1.5rem;
 }
 
 .editLink {
